...
           .navigationTitle(viewModel.movieDetails?.title ?? "Movie Details")
           .navigationBarTitleDisplayMode(.inline)
           .onAppear {
               viewModel.fetchMovieDetails()
           }
           .navigationViewStyle(StackNavigationViewStyle())
           .accessibility(identifier: "MovieDetailsView")
       }
       
       //MARK: - Private Views -
       
       private var posterImageView: some View {
           AsyncCachedImage(url: viewModel.movieDetails?.posterURL) { image in
...
